--- a/video.html
+++ b/video.html
@@ -3,37 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Player</title>
+    <title>Movie Player</title>
     <style>
         body {
-            margin: 0;
-            height: 100vh;
-            background: linear-gradient(to right, #4e54c8, #8f94fb); /* Gradient from blue to light purple */
+            background: linear-gradient(to right, #4e54c8, #8f94fb);
             display: flex;
             justify-content: center;
             align-items: center;
             font-family: Arial, sans-serif;
             flex-direction: column;
+            height: 100vh;
             color: white;
         }
         .player-container {
             text-align: center;
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(0, 0, 0, 0.7);
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-            width: 80%;
+            width: 90%;
             max-width: 800px;
         }
         video {
             width: 100%;
+            max-height: 70vh;
             border-radius: 10px;
         }
-        .controls {
-            margin-top: 10px;
+        .quality-buttons {
+            margin-top: 15px;
             display: flex;
-            align-items: center;
-            justify-content: space-between;
+            justify-content: center;
         }
         button {
             margin: 5px;
@@ -49,45 +48,49 @@
         button:hover {
             background-color: #ff9f80;
         }
-        input[type="range"] {
-            width: 150px;
-        }
     </style>
 </head>
 <body>
     <div class="player-container">
-        <h2>Lucky Bhaskar - Hindi Dubbed</h2>
-        <h5>Only 480p is available
-        </h2>
+        <h2 id="movieTitle"></h2>
+
+        <!-- Video player for lucky bhaskar or pushpa -->
         <video id="videoPlayer" controls>
-            <source src="https://pixeldra.in/api/file/JYjgzKgA?download" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <div class="controls">
-            <button onclick="playVideo()">Play</button>
-            <button onclick="pauseVideo()">Pause</button>
-            <label>
-                Volume:
-                <input type="range" id="volumeControl" min="0" max="1" step="0.1" value="1" onchange="setVolume()">
-            </label>
+
+        <!-- Quality selection for Pushpa 2 -->
+        <div class="quality-buttons" id="qualityButtons" style="display:none;">
+            <button onclick="setVideoQuality('fullhd')">Full HD</button>
+            <button onclick="setVideoQuality('1080p')">1080p</button>
         </div>
+
+        <script>
+            // Get movie parameter from the URL
+            const urlParams = new URLSearchParams(window.location.search);
+            const movie = urlParams.get('movie');
+            const videoPlayer = document.getElementById('videoPlayer');
+            const movieTitle = document.getElementById('movieTitle');
+            const qualityButtons = document.getElementById('qualityButtons');
+
+            if (movie === 'lucky-bhaskar') {
+                movieTitle.innerText = "Lucky Bhaskar - Hindi Dubbed";
+                videoPlayer.src = "https://pixeldra.in/api/file/JYjgzKgA?download"; // Lucky Bhaskar video link
+            } else if (movie === 'pushpa') {
+                movieTitle.innerText = "Pushpa 2 - The Rule";
+                qualityButtons.style.display = "block"; // Show quality buttons for Pushpa 2
+            }
+            function setVideoQuality(quality) {
+                let videoLink = '';
+                if (quality === 'fullhd') {
+                    videoLink = "https://go.springsfern.in/dl/1048116/"; // Full HD link
+                } else if (quality === '1080p') {
+                    videoLink = "https://pixeldra.in/api/file/LWju1aX7?download"; // 1080p link
+                }
+                videoPlayer.src = videoLink;
+                videoPlayer.play();
+            }
+        </script>
     </div>
-
-    <script>
-        const video = document.getElementById('videoPlayer');
-        const volumeControl = document.getElementById('volumeControl');
-
-        function playVideo() {
-            video.play();
-        }
-
-        function pauseVideo() {
-            video.pause();
-        }
-
-        function setVolume() {
-            video.volume = volumeControl.value;
-        }
-    </script>
 </body>
 </html>
