--- a/index.html
+++ b/index.html
@@ -3,58 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gradient Background with Clickable Images</title>
+    <title>Movie Selection</title>
     <style>
         body {
-            margin: 0;
-            height: 100vh;
-            background: linear-gradient(to right, #ff7e5f, #feb47b); /* Gradient from pink to orange */
+            background: linear-gradient(to right, #4e54c8, #8f94fb); /* Gradient from blue to light purple */
             display: flex;
             justify-content: center;
             align-items: center;
             font-family: Arial, sans-serif;
             flex-direction: column;
+            height: 100vh;
+            color: white;
         }
-        .image-container {
+        .movie-container {
             display: flex;
             justify-content: space-around;
+            align-items: center;
             width: 80%;
+            max-width: 1000px;
             flex-wrap: wrap;
         }
-        .image-container a {
-            margin: 10px;
-            display: inline-block;
+        .movie {
+            cursor: pointer;
             transition: transform 0.3s ease;
         }
-        .image-container a:hover {
-            transform: scale(1.1); /* Slight zoom effect on hover */
+        .movie img {
+            width: 300px;
+            height: auto;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
         }
-        .image-container img {
-            width: 250px;
-            height: 150px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        .movie:hover {
+            transform: scale(1.05);
         }
     </style>
 </head>
 <body>
-    <h1 style="color: white;">Movies</h1>
-    <div class="image-container">
-        <!-- Link to the video player -->
-        <a href="video.html" id="image1">
-            <img src="https://connectmyindia.com/posts/images/2024/Lucky-Bhaskar-Movie-Streami.jpg" alt="Lucky Bhaskar">
-            <p style="text-align: center; color: white;">Lucky Bhaskar (Hindi Dubbed)</p>
-        </a>
-        <a href="https://example2.com">
-            <img src="https://assets-in.bmscdn.com/discovery-catalog/events/et00356724-pzsgtlwbex-landscape.jpg" alt="Pushpa 2">
-            <p style="text-align: center; color: white;">Pushpa 2: The Rule</p>
-        </a>
-        <a href="https://example3.com">
-            <img src="https://via.placeholder.com/150" alt="Image 3">
-        </a>
-        <a href="https://example4.com">
-            <img src="https://via.placeholder.com/150" alt="Image 4">
-        </a>
+    <h1>Choose a Movie</h1>
+    <div class="movie-container">
+        <!-- Click on the image to go to respective video page -->
+        <div class="movie" onclick="window.location.href='video.html?movie=pushpa'">
+            <img src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/listing/medium/pushpa-the-rule--part-2-et00356724-1729771762.jpg" alt="Pushpa Movie">
+            <p>Pushpa - Hindi Dubbed</p>
+        </div>
+        <div class="movie" onclick="window.location.href='video.html?movie=lucky-bhaskar'">
+            <img src="https://assets-in.bmscdn.com/discovery-catalog/events/et00386123-pfsmpymqfs-landscape.jpg" alt="Lucky Bhaskar Movie">
+            <p>Lucky Bhaskar - Hindi Dubbed</p>
+        </div>
     </div>
 </body>
 </html>
